fix: fix statics resource path error

--- a/web/chat.html
+++ b/web/chat.html
@@ -66,8 +66,8 @@
     <button>Send</button>
   </form>
 
-  <script src="../statics/js/ws.js"></script>
-  <script src="../statics/js/jquery.min.js" rel="external nofollow" ></script>
+  <script src="../../statics/js/ws.js"></script>
+  <script src="../../statics/js/jquery.min.js" rel="external nofollow" ></script>
   <script>
 
     // function sendMsg() {
