--- a/web/chat.html
+++ b/web/chat.html
@@ -111,7 +111,12 @@
     };
     let n = getParams("username")
     let p = getParams("password")
-    let socket = new VIL.EngineSocket("ws://49.232.19.17/ws/msg?username=" + n + "&password=" + p, handler);
+    let socket = new VIL.EngineSocket("ws://49.232.19.17:1111/ws/msg?username=" + n, handler);
+
+    var url = window.location.href
+    var state = {title:'',url:url};
+    var valiable = url.split("?")[0];
+    history.pushState(state,'',valiable);
 
     $('form').submit(function () {
       socket.send($('#m').val());
