--- a/web/login.html
+++ b/web/login.html
@@ -14,10 +14,10 @@
 {{end}}
 
 {{define "register-form"}}
-	<form action="/user/register" method="post">
+	<form action="/api/v1/registerFromHTML" method="post">
 		<div class="form-group">
 			<label for="email">Email</label>
-			<input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="输入 email">
+			<input type="text" class="form-control" id="email" aria-describedby="emailHelp" name="email" placeholder="输入 email">
 			<small id="emailHelp" class="form-text text-muted">我们会严格保存您的邮箱</small>
 		</div>
 		<div class="form-group">
